scribble/scribble-assertions/src/test/resources/good/extensions/assertions/ComplexMessageFlow2.scr
module good.extensions.assertions.ComplexMessageFlow2;


type <java> "java.lang.integer" from "rt.jar" as int;


// assrt-core version of good.extensions.assertions.ComplexMessageFlow;
global protocol Proto1(role A, role B, role C, role D)
{	
	MSG1(x:int) from A to B;  @"(x > 10)"
	MSG1(y:int) from A to B; 
	
	MSG1(xa: int) from B to C;  @"(xa = x)"
	MSG1(ya:int) from B to C;  @"(ya = y)"
	
	MSG1(z:int) from C to D;  @"(z < xa)"
}
