scribble/scribble-assertions/src/test/resources/bad/extensions/assertions/RecWithAssertions2.scr
module bad.extensions.assertions.RecWithAssertions2;


type <java> "java.lang.integer" from "rt.jar" as int;

// assrt-core version of bad.extensions.assertions.RecWithAssertions
global protocol Proto1(role A, role B, role C)
{
	//rec Loop
	//{
		choice at A
		{
			MSG1(x:int) from A to B;  @"(x < 10)"
			MSG3(z:int) from B to C;  @"(z < y)"
			MSG3() from B to C;
		}
		or
		{
			MSG2(y:int) from A to B;  @"(y > 10)"
			MSG4(z1:int) from B to C;  @"(z1 < y)"  // Artificial
		//	continue Loop; 
		//}
		do Proto1(A, B, C);
	}
}
